--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -1,18 +1,19 @@
 = form_for @report do |f|
   - if @report.errors.any?
-    #error_explanation
+    #error_explanation.alert.alert-danger
       h2 = "#{pluralize(@report.errors.count, "error")} prohibited this report from being saved:"
       ul
         - @report.errors.full_messages.each do |message|
           li = message
 
-  .field
+  .form-group
     = f.label :title
-    = f.text_field :title
-  .field
+    = f.text_field :title, class: "form-control"
+  .form-group
     = f.label :date
-    = f.date_select :date
-  .field
+    .form-row
+      = f.date_field :date, value: Time.current.strftime("%Y-%m-%d"), class: 'form-control'
+  .form-group
     = f.label :content
-    = f.text_area :content
-  .actions = f.submit
+    = f.text_area :content, class: "form-control"
+  = f.submit class: "btn btn-primary"
