--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -8,6 +8,10 @@ h2 Sign up
     = f.email_field :email, autofocus: true, class: "form-control"
 
   .form-group
+    = f.label :username
+    = f.text_field :username, class: "form-control"
+
+  .form-group
     = f.label :password
     = f.password_field :password, autocomplete: "off", class: "form-control"
     - if @minimum_password_length
