--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,6 +13,8 @@ html
         strong => link_to current_user.email, root_path
         => link_to 'プロフィール変更', edit_user_registration_path
         = link_to 'ログアウト', destroy_user_session_path, method: :delete
+        - if current_user.admin?
+          =< link_to '管理者画面', rails_admin_path
       - else
         => link_to 'サインアップ', new_user_registration_path
         = link_to 'ログイン', new_user_session_path
