自分のreport以外を編集できないように修正

--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -9,12 +9,12 @@
   .form-group
     = f.label :date
     .form-row
-      = f.date_field :date, value: Time.current.strftime("%Y-%m-%d"), class: 'form-control'
+      = f.date_field :date, class: 'form-control'
 
   .form-group
     = f.label :content
     = f.text_area :content, class: "form-control"
 
-  = f.hidden_field :user_id, value: current_user.id
+  = f.hidden_field :user_id
 
   = f.submit class: "btn btn-primary"
