--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -17,9 +17,14 @@ table.table
         td = User.find_by(id: report.user_id).username
         td = report.content
         td = link_to 'Show', report
-        td = link_to 'Edit', edit_report_path(report)
-        td = link_to 'Destroy', report, data: { confirm: 'Are you sure?' }, method: :delete
+        td
+          - if @user.id == report.user_id
+            = link_to 'Edit', edit_report_path(report)
+        td
+          - if @user.id == report.user_id
+            = link_to 'Destroy', report, data: { confirm: 'Are you sure?' }, method: :delete
 
 br
 
-= link_to 'New Report', new_report_path
+- if can? :create, Report
+  = link_to 'New Report', new_report_path
