--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -5,6 +5,9 @@ p
   strong Content:
   = @report.content
 
-=> link_to 'Edit', edit_report_path(@report)
-'|
+/ ログイン済み、かつ自分のreportの場合
+- if current_user && current_user.id == @report.user_id
+  => link_to 'Edit', edit_report_path(@report)
+  '|
+
 =< link_to 'Back', reports_path
