--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,6 +1,6 @@
 .row
   .col-md-3.col-sm-3.col-xs-12
-    = gravatar_for @user, size: 255
+    = gravatar_for @user, size: 255, fullwidth: true
 
     .
       / 公開名が設定されている場合表示
