--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -6,6 +6,7 @@
     .h4
       span.text-muted.h6 witten by
       =< link_to "#{@user.username}", "/users/info/#{@user.username}"
+      = link_to gravatar_for(@user, size: 20, fullwidth: false), "/users/info/#{@user.username}"
 
     .border.border-left-0.border-right-0
       = simple_format(h(@report.content))
@@ -24,4 +25,4 @@
       = link_to gravatar_for(@user, size: 80, fullwidth: false), "/users/info/#{@user.username}"
       .
         strong = link_to "#{@user.username}", "/users/info/#{@user.username}"
-        . Reports: 10
+        . Reports: #{@user.reports.size}
