--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -14,7 +14,7 @@
         a href="#" HPなどへのリンク
       . 所属
   .col-md-9.col-sm-9.col-xs-12
-    h3 Reports
+    h3 Reports: #{@user.reports.size}
     .
       table.table
         - @reports.each do |report|
