ヘッダーにユーザメニューと新規作成ボタンを追加
ユーザメニューからは、マイページ、設定、ログアウトにアクセス可能。

--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -13,8 +13,8 @@
 
   .form-group
     = f.label :content
-    = f.text_area :content, class: "form-control"
+    = f.text_area :content, rows: 25, spellcheck: false, class: "form-control"
 
   = f.hidden_field :user_id
-
+  
   = f.submit class: "btn btn-primary"
