--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -6,18 +6,23 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
 
     .collapse.navbar-collapse#navbarSupportedContent
       ul.navbar-nav.ml-auto
-        li.nav-item
-          = link_to 'Home', root_path, class: 'nav-link'
+        - if user_signed_in?
+          li.nav-item
+            = link_to 'New report', new_report_path, class: 'btn btn-primary'
         li.nav-item
           = link_to 'Reports', reports_path, class: 'nav-link'
         - if user_signed_in?
           - if current_user.admin?
             li.nav-item
               = link_to 'Management', rails_admin_path, class: 'nav-link'
-          li.nav-item
-            = link_to current_user.username, "/users/info/#{current_user.username}", class: 'nav-link'
-          li.nav-item
-            = link_to 'Log out', destroy_user_session_path, method: :delete, class: 'nav-link'
+          li.nav-item.dropdown
+            a.nav-link.dropdown-toggle#navbarDropdown href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" #{current_user.username}
+            .dropdown-menu aria-labelledby="navbarDropdown"
+              = link_to 'My page', "/users/info/#{current_user.username}", class: 'dropdown-item'
+              = link_to 'Settings', edit_user_registration_path, class: 'dropdown-item'
+              = link_to 'Log out', destroy_user_session_path, method: :delete, class: 'dropdown-item'
         - else
+          li.nav-item
+            = link_to 'Sign up', new_user_registration_path, class: 'nav-link'
           li.nav-item
             = link_to 'Log in', new_user_session_path, class: 'nav-link'
