--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -12,21 +12,29 @@
 
       / ユーザ名を表示（全員登録済みなはず ログインID）
       - if @user.last_name.present? || @user.first_name.present?
-        h6.text-muted = "@#{@user.username}"
+        h6.text-muted @#{@user.username}
       - else
-        h4.text-muted = "@#{@user.username}"
+        h4.text-muted @#{@user.username}
+
+      hr
     .
       - if @user.introduction.present?
         . = @user.introduction
+        hr
 
       - if @user.site.present?
-        = link_to @user.site, @user.site
+        => fa_icon('link')
+        = link_to @user.site, @user.site, target: '_blank', style: 'word-break: break-all'
 
       - if @user.belong_to.present?
-        . = @user.belong_to
+        .
+          => fa_icon('building-o')
+          = @user.belong_to
 
       - if @user.location.present?
-        . = @user.location
+        .
+          => fa_icon('map-marker')
+          = @user.location
 
   .col-md-9.col-sm-9.col-xs-12
     h3#aaa Reports: #{@user.reports.size}
