一部を日本語化
config/locales以下に辞書ファイルを作成

--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,68 +1,69 @@
 h2 Edit = resource_name.to_s.humanize
 
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = devise_error_messages!
+.card
+  .card-header アカウント編集
+  .card-body
+    = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+      = devise_error_messages!
 
-  .form-group
-    = f.label :email
-    = f.email_field :email, autofocus: true, class: "form-control"
+      .form-group
+        = f.label :email, 'メールアドレス'
+        = f.email_field :email, autofocus: true, class: "form-control"
 
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    .alert.alert-warning Currently waiting confirmation for: = resource.unconfirmed_email
+      - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+        .alert.alert-warning Currently waiting confirmation for: = resource.unconfirmed_email
 
-  .form-group
-    = f.label :username
-    = f.text_field :username, class: "form-control"
+      .form-group
+        = f.label :username, 'ユーザ名'
+        = f.text_field :username, class: "form-control"
 
-  .form-group
-    => f.label :password
-    i
-      | (leave blank if you don't want to change it)
-    = f.password_field :password, autocomplete: "off", class: "form-control"
-    - if @minimum_password_length
-      small.form-text.text-muted #{@minimum_password_length} characters minimum
+      .form-group
+        => f.label :password, 'パスワード'
+        i
+          | (leave blank if you don't want to change it)
+        = f.password_field :password, autocomplete: "off", class: "form-control"
+        - if @minimum_password_length
+          small.form-text.text-muted #{@minimum_password_length} 文字以上
 
-  .form-group
-    = f.label :password_confirmation
-    = f.password_field :password_confirmation, autocomplete: "off", class: "form-control"
+      .form-group
+        = f.label :password_confirmation, '確認用パスワード'
+        = f.password_field :password_confirmation, autocomplete: "off", class: "form-control"
 
-  - if false
-    .form-group
-      => f.label :current_password
-      i
-        | (we need your current password to confirm your changes)
-      = f.password_field :current_password, autocomplete: "off", class: "form-control"
+      - if false
+        .form-group
+          => f.label :current_password
+          i
+            | (we need your current password to confirm your changes)
+          = f.password_field :current_password, autocomplete: "off", class: "form-control"
 
-  .form-group
-    = f.label '名前'
-    .row
-      .col
-        = f.text_field :last_name, placeholder: '姓', class: "form-control"
-      .col
-        = f.text_field :first_name, placeholder: '名', class: "form-control"
+      .form-group
+        = f.label '名前'
+        .row
+          .col
+            = f.text_field :last_name, placeholder: '姓', class: "form-control"
+          .col
+            = f.text_field :first_name, placeholder: '名', class: "form-control"
 
-  .form-group
-    = f.label :introduction, '自己紹介'
-    = f.text_area :introduction, rows: 7, class: "form-control"
+      .form-group
+        = f.label :introduction, '自己紹介'
+        = f.text_area :introduction, rows: 7, class: "form-control"
 
-  .form-group
-    = f.label :belong_to, '所属'
-    = f.text_field :belong_to, class: "form-control"
+      .form-group
+        = f.label :belong_to, '所属'
+        = f.text_field :belong_to, class: "form-control"
 
-  .form-group
-    = f.label :location, '居住地'
-    = f.text_field :location, placeholder: 'Tokyo, Japan', class: "form-control"
+      .form-group
+        = f.label :location, '居住地'
+        = f.text_field :location, placeholder: 'Tokyo, Japan', class: "form-control"
 
-  .form-group
-    = f.label :site, 'サイト/ブログ'
-    = f.text_field :site, placeholder: 'URL', class: "form-control"
+      .form-group
+        = f.label :site, 'サイト/ブログ'
+        = f.text_field :site, placeholder: 'URL', class: "form-control"
 
-  = f.submit "Update", class: "btn btn-primary"
+      = f.submit "更新", class: "btn btn-primary"
 
-h3 Cancel my account
-
-p Unhappy?
-
-= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-outline-danger"
-
-= link_to "Back", :back
+.card.mt-4
+  .card-header.bg-danger.text-light アカウント削除
+  .card-body
+    | アカウントを削除すると二度と元に戻せません．
+    = button_to "アカウントを削除する", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-outline-danger"
