--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -15,7 +15,7 @@
 
   .form-group
     = f.label :content
-    = f.text_area :content, rows: 25, spellcheck: false, class: "form-control"
+    = f.text_area :content, rows: 25, spellcheck: false, placeholder: '今日はどんな仕事をしましたか？', class: "form-control"
 
   = f.hidden_field :user_id
 
