--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,3 +15,6 @@ html
       - if alert
         .alert.alert-danger = alert
       == yield
+    footer.container.my-4
+      hr
+      .text-muted Copyright © 2017 #{link_to 'Daily Report App', root_path} All Rights Reserved.
