--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -8,24 +8,24 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.mb-3
       ul.navbar-nav.ml-auto
         - if user_signed_in?
           li.nav-item
-            = link_to 'New report', new_report_path, class: 'btn btn-primary'
+            = link_to '日報を作成', new_report_path, class: 'btn btn-primary'
         li.nav-item
-          = link_to 'Reports', reports_path, class: 'nav-link'
+          = link_to '日報一覧', reports_path, class: 'nav-link'
         - if user_signed_in?
           - if current_user.admin?
             li.nav-item
-              = link_to 'Management', rails_admin_path, class: 'nav-link'
+              = link_to '管理画面', rails_admin_path, class: 'nav-link'
 
           li.nav-item.dropdown
             a.nav-link.dropdown-toggle#navbarDropdown href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
               = current_user.username
-              = gravatar_for(current_user, size: 30, fullwidth: false)
+              =< gravatar_for(current_user, size: 30, fullwidth: false)
             .dropdown-menu aria-labelledby="navbarDropdown"
-              = link_to 'My page', "/users/info/#{current_user.username}", class: 'dropdown-item'
-              = link_to 'Settings', edit_user_registration_path, class: 'dropdown-item'
-              = link_to 'Log out', destroy_user_session_path, method: :delete, class: 'dropdown-item'
+              = link_to 'マイページ', "/users/info/#{current_user.username}", class: 'dropdown-item'
+              = link_to '設定', edit_user_registration_path, class: 'dropdown-item'
+              = link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'dropdown-item'
         - else
           li.nav-item
-            = link_to 'Sign up', new_user_registration_path, class: 'nav-link'
+            = link_to 'サインアップ', new_user_registration_path, class: 'nav-link'
           li.nav-item
-            = link_to 'Log in', new_user_session_path, class: 'nav-link'
+            = link_to 'ログイン', new_user_session_path, class: 'nav-link'
