--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -5,7 +5,7 @@
     == render 'profile'
 
   .col-md-9.col-sm-9.col-xs-12
-    h3#aaa Reports: #{@user.reports.size}
+    h3 日報: #{@user.reports.size}
     .
       table.table
         - @reports.each do |report|
