--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -5,22 +5,24 @@ table.table
     tr
       th 日付
       th ユーザ名
-      th
-      th
-      th
+      th コメント
+      / th
+      / th
+      / th
 
   tbody
     - @reports.each do |report|
       tr
-        td = report.date
-        td = report.user.username
-        td = link_to '詳細', report
-        td
-          - if @user.id == report.user_id
-            = link_to '編集', edit_report_path(report)
-        td
-          - if @user.id == report.user_id
-            = link_to '削除', report, data: { confirm: 'Are you sure?' }, method: :delete
+        td = link_to report.date, report_path(report)
+        td = link_to report.user.username, "/users/info/#{report.user.username}"
+        td = report.comments.size
+        / td = link_to '詳細', report
+        / td
+        /   - if @user.id == report.user_id
+        /     = link_to '編集', edit_report_path(report)
+        / td
+        /   - if @user.id == report.user_id
+        /     = link_to '削除', report, data: { confirm: 'Are you sure?' }, method: :delete
 
 br
 
