--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -1,33 +1,7 @@
 h1 日報一覧
 
-table.table
-  thead
-    tr
-      th 日付
-      th ユーザ名
-      th コメント
-      / th
-      / th
-      / th
-
-  tbody
-    - @reports.each do |report|
-      tr
-        td = link_to report.date, report_path(report)
-        td = link_to report.user.username, "/users/info/#{report.user.username}"
-        td = report.comments.size
-        / td = link_to '詳細', report
-        / td
-        /   - if @user.id == report.user_id
-        /     = link_to '編集', edit_report_path(report)
-        / td
-        /   - if @user.id == report.user_id
-        /     = link_to '削除', report, data: { confirm: 'Are you sure?' }, method: :delete
-
-.d-flex.justify-content-center
-  = paginate @reports
-
-br
+#reports
+  == render :partial => 'reports'
 
 - if can? :create, Report
   = link_to '日報を作成する', new_report_path, class: 'btn btn-primary'
