--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -21,6 +21,10 @@ h2 Sign up
     = f.label :password_confirmation
     = f.password_field :password_confirmation, autocomplete: "off", class: "form-control"
 
+  / .form-group
+    = f.label :group_id
+    = f.number_field :group_id, class: "form-control"
+
   = f.submit "ユーザ登録", class: "btn btn-primary"
 
 == render "devise/shared/links"
