--- a/app/views/groups/edit.html.slim
+++ b/app/views/groups/edit.html.slim
@@ -1,8 +1,7 @@
-h1 Editing group
+h1 グループ編集
 
 == render 'form'
 
-=> link_to 'Show', @group
+=> link_to '表示', @group
 '|
-=< link_to 'Back', groups_path
-
+=< link_to 'グループ一覧', groups_path
