--- a/app/views/groups/index.html.slim
+++ b/app/views/groups/index.html.slim
@@ -4,19 +4,21 @@ table.table
   thead
     tr
       th グループ名
-      th
-      th
-      th
+      th 参加者数
+      / th
+      / th
+      / th
 
   tbody
     - @groups.each do |group|
       tr
-        td = group.name
-        td = link_to 'Show', group
-        td = link_to 'Edit', edit_group_path(group)
-        td = link_to 'Destroy', group, data: { confirm: 'Are you sure?' }, method: :delete
+        td = link_to group.name, group
+        td = group.users.size
+        / td = link_to 'Show', group
+        / td = link_to 'Edit', edit_group_path(group)
+        / td = link_to 'Destroy', group, data: { confirm: 'Are you sure?' }, method: :delete
 
-br
+
 
 - if can? :create, Group
   = link_to 'グループを作成する', new_group_path, class: 'btn btn-primary'
