--- a/app/views/groups/show.html.slim
+++ b/app/views/groups/show.html.slim
@@ -1,21 +1,27 @@
-h1 = @group.name
+.clearfix
+  .float-left
+    h1 = @group.name
+.clearfix
+  .float-right
+    - if can? :update, @group
+      => link_to '編集', edit_group_path(@group)
+    - if can? :destroy, @group
+      = link_to '削除', @group, data: { confirm: 'Are you sure?' }, method: :delete
 
 p = @group.description
 
 p
-  | Owner:
-  =< @group.user.username
+  | 管理者：
+  = @group.user.username
 
 = form_for(@group, url: groups_set_path, method: :post) do |f|
   .form-group
-    = f.label :password
-    = f.password_field :password, class: "form-control"
+    / = f.label :password
+    = f.password_field :password, class: "form-control", placeholder: "パスワードを入力してください"
 
   = f.hidden_field :group_id, value: @group.id
 
   = f.submit 'このグループに参加', class: "btn btn-primary"
 
 
-=> link_to 'Edit', edit_group_path(@group)
-'|
-=< link_to 'Back', groups_path
+= link_to 'グループ一覧', groups_path
