--- a/app/views/reports/_reports.html.slim
+++ b/app/views/reports/_reports.html.slim
@@ -3,6 +3,7 @@ table.table
     tr
       th 日付
       th ユーザ名
+      th グループ
       th コメント
 
   tbody
@@ -10,6 +11,7 @@ table.table
       tr
         td = link_to report.date, report_path(report)
         td = link_to report.user.username, "/users/info/#{report.user.username}"
+        td = report.user.group_id
         td = report.comments.size
 
 / Kaminari paginator
