サインアップ、ログイン画面を日本語化

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,4 +18,4 @@ html
       == yield
     footer.container
       hr
-      .text-muted Copyright © 2017 #{link_to 'Daily Report App', root_path} All Rights Reserved.
+      .text-muted Copyright © 2017-2018 #{link_to 'Daily Report App', root_path} All Rights Reserved.
