--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,4 +1,4 @@
-h2 Sign up
+h2 サインアップ
 
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = devise_error_messages!
@@ -25,6 +25,6 @@ h2 Sign up
     = f.label :group_id
     = f.number_field :group_id, class: "form-control"
 
-  = f.submit "ユーザ登録", class: "btn btn-primary"
+  = f.submit "サインアップ", class: "btn btn-primary"
 
 == render "devise/shared/links"
